# GameOfLife

./: .gitignore  asset-manifest.json  example.txt  index.html  precache-manifest.0eb943f02a896782e054c19a3963fe59.js  precache-manifest.19e682e728def922b3dddc3d8ca033d9.js  precache-manifest.2a5444a533c1973ba058aadf02c0f89c.js  precache-manifest.3296cc796189e694dacb335b305b6074.js  precache-manifest.3548ae16a62ad5cf241fbc89d0ea737f.js  precache-manifest.35b8d8f9b6ada7f6624d5161ab0eeefb.js  precache-manifest.5babf578e2c856a376308b9d9ad187ab.js  precache-manifest.5fe2139e592dcae6bf1e8c404538123e.js  precache-manifest.8864506356406e1b44a7408531739e21.js  precache-manifest.e8261a20fdc8b151014dbcae85a6a033.js  service-worker.js
algorithm/: Cargo.toml  README.md
algorithm/src/: cell.rs  lib.rs
game-of-life-algorithm/: Cargo.toml
static/css/: 2.1c23bce0.chunk.css  2.1c23bce0.chunk.css.map  2.5af6de36.chunk.css  2.5af6de36.chunk.css.map  2.617c7626.chunk.css  2.617c7626.chunk.css.map  2.885a2ded.chunk.css  2.885a2ded.chunk.css.map  2.bd9d4625.chunk.css  2.bd9d4625.chunk.css.map  2.cf37cb6b.chunk.css  2.cf37cb6b.chunk.css.map  main.29b44527.chunk.css  main.29b44527.chunk.css.map  main.da3023df.chunk.css  main.da3023df.chunk.css.map  main.fb9c172e.chunk.css  main.fb9c172e.chunk.css.map
static/js/: 2.06d06842.chunk.js  2.06d06842.chunk.js.map  2.1991c426.chunk.js  2.1991c426.chunk.js.map  2.2261d8bf.chunk.js  2.2261d8bf.chunk.js.map  2.47d2980b.chunk.js  2.6073620a.chunk.js  (+45 more)
web/: .prettierrc.json  config-overrides.js  index.html  index.js  package-lock.json  package.json
(+18 files in other folders)
